--- a/Views/Home/Login.cshtml
+++ b/Views/Home/Login.cshtml
@@ -4,35 +4,37 @@
     ViewData["Title"] = "Login";
 }
 
-<h1>Login</h1>
-
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Login">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            @if(ViewBag.ErrorMessage != null)
-            {
-                <p class="text-danger">@ViewBag.ErrorMessage</p>
-            }
-            <div class="form-group">
-                <label asp-for="UserEmail" class="control-label"></label>
+</br><br />
+<div class="container jumbotron bg-light" style="width:35%">
+    <form asp-action="Login">
+        <div class="card-header-pills bg-dark text-white">
+            <h2 style="text-align:center">Login</h2>
+        </div>
+        @if (ViewBag.ErrorMessage != null)
+        {
+            <p class="text-danger">@ViewBag.ErrorMessage</p>
+        }
+        <div class="form-group" style="80%">
+            <label asp-for="UserEmail" class="text-dark"></label>
+            <div class="input-group mb-2">
                 <input asp-for="UserEmail" class="form-control" />
                 <span asp-validation-for="UserEmail" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Password" class="control-label"></label>
-                <input type ="password" asp-for="Password" class="form-control" />
+        </div>
+        <div class="form-group" style="80%">
+            <label asp-for="Password" class="text-dark"></label>
+            <div class="input-group mb-2">
+                <input type="password" asp-for="Password" class="form-control" />
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Login" class="btn btn-primary" />
-            </div>
-            @Html.ActionLink("New User? Register here", "Register")
-        </form>
-    </div>
-</div>
+        </div>
+        <div class="form-group" style="80%">
+            <input type="submit" value="Login" class="btn btn-primary" />
+        </div>
+        @Html.ActionLink("New User? Register here", "Register")
+    </form>
 
+</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
